k8s/apps/notebook-api/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notebook
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
